// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDescription handles expressions 1`] = `
Object {
  "_tag": "Right",
  "right": Object {
    "numberProp": 12,
    "prop1": "val1",
    "prop2": 42,
  },
}
`;

exports[`getDescription returns error message of the first wrong expression 1`] = `
Object {
  "_tag": "Left",
  "left": "The dices are missing (ex: roll d6)",
}
`;

exports[`getDescription returns object description from the table 1`] = `
Object {
  "_tag": "Right",
  "right": Object {
    "prop1": "val1",
    "prop2": "val2",
  },
}
`;
